pages input field, text to number

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <input type="text" placeholder="Author" id="author" name="author" required>
                 <br>
                 <label for="pages">Number of pages:</label>
-                <input type="text" placeholder="120" id="pages" name="pages" required>
+                <input type="number" placeholder="120" id="pages" name="pages" required>
                 <br>
                 <label for="is-read">Read:</label>
                 <input type="checkbox" name="is-read" id="is-read">
